installers/aws-eks/install/hello-world/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  namespace: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
        - name: hello-world-app
          image: strm/helloworld-http
          ports:
            - name: http
              containerPort: 80
