installers/aws-eks/install/hello-world/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: hello-world
  labels:
    app: hello-world-service
    ci.name: hello-world-service
spec:
  selector:
    app: hello-world-app
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
