installers/aws-eks/install/hello-world/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: hello-world-ingress
    ci.name: hello-world-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: hello-world-service
              servicePort: 9090
            path: /foo
